; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMSlowClkCtrMatchSet.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/hal/extr_prcm.c_PRCMSlowClkCtrMatchSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HIB3P3_BASE = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_IRQ_LSW_CONF = common dso_local global i64 0, align 8
@HIB3P3_O_MEM_HIB_RTC_IRQ_MSW_CONF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PRCMSlowClkCtrMatchSet(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* @HIB3P3_BASE, align 8
  %4 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_IRQ_LSW_CONF, align 8
  %5 = add nsw i64 %3, %4
  %6 = load i64, i64* %2, align 8
  %7 = call i32 @MAP_PRCMHIBRegWrite(i64 %5, i64 %6)
  %8 = load i64, i64* @HIB3P3_BASE, align 8
  %9 = load i64, i64* @HIB3P3_O_MEM_HIB_RTC_IRQ_MSW_CONF, align 8
  %10 = add nsw i64 %8, %9
  %11 = load i64, i64* %2, align 8
  %12 = lshr i64 %11, 32
  %13 = call i32 @MAP_PRCMHIBRegWrite(i64 %10, i64 %12)
  ret void
}

declare dso_local i32 @MAP_PRCMHIBRegWrite(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
